Design issues on mobile login and dashboard resolved

--- a/public/assets/css/donation.scss
+++ b/public/assets/css/donation.scss
@@ -99,9 +99,9 @@
                 }
 
                 .date-select {
-                    width: 132.576px;
-                    height: 48px;
-                    border: 1px solid #DDDFE5;
+                    // width: 132.576px;
+                    // height: 48px;
+                    // border: 1px solid #DDDFE5;
                     border-radius: 8px;
 
                     select {
@@ -176,7 +176,7 @@
                     display: flex;
                     flex-direction: column;
                     justify-content: space-between;
-
+                    margin-bottom: 20px;
                     .top {
                         .heading {
                             display: flex;
@@ -506,3 +506,56 @@
         }
     }
 }
+.donations .header .filters form .date-select input {
+    border: 1px solid #DDDFE5;
+    color: #949494;
+    padding: 10px 15px;
+    border-radius: 5px;
+    }
+    .select2-container--default .select2-selection--single .select2-selection__arrow{
+      top: 13px !important;
+        right: 9px !important;
+    }
+    .select2-container--default .select2-selection--single .select2-selection__rendered{
+      color: #949494 !important;
+    }
+    .select2-container--default .select2-selection--single{
+      border: 1px solid #DDDFE5 !important;
+    color: #949494 !important;
+    height: auto !important;
+    padding: 10px 15px;
+    border-radius: 5px;
+    }
+
+
+    .btn-inline-group{
+        display: flex;
+      }
+      .btn-inline-group button:first-child{
+        margin-right: 10px;
+      }
+      
+      @media only screen and (max-width: 768px) {
+        .donations .header .heading{
+            display: block;
+        }
+        .donations .header{
+          display: block;
+        }
+        .donations .header form{
+          display: block !important;
+        }
+        .donations .header form div{
+          width: 100%;
+          margin-bottom: 20px;
+        }
+        .donations .header form select,input{
+          width: 100% !important;
+        }
+        .donations .header .filters form .status-select{
+          width: 100%;
+        }
+        .btn-inline-group{
+          display: flex;
+        }
+      }
