--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -42,6 +42,7 @@
 }
 .main .sidebar .main-container .top .menu-items {
   margin-top: 2rem;
+  background: #fff;
 }
 .main .sidebar .main-container .top .menu-items .menu {
   list-style: none;
